[gd_scene load_steps=4 format=3 uid="uid://b2hc50ovt2mbu"]

[ext_resource type="Theme" uid="uid://biy1jtch5ko3f" path="res://theme.tres" id="1_3uifx"]
[ext_resource type="Script" path="res://menu_dialog/menu_dialog.gd" id="2_qf41v"]
[ext_resource type="PackedScene" uid="uid://jks85lh402mp" path="res://menu/menu.tscn" id="3_5nthj"]

[node name="MenuDialog" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_3uifx")
script = ExtResource("2_qf41v")

[node name="Menu" parent="." instance=ExtResource("3_5nthj")]
layout_mode = 2

[connection signal="action_performed" from="Menu" to="." method="_on_menu_action_performed"]
[connection signal="sub_menu_dialog_opened" from="Menu" to="." method="_on_menu_sub_menu_dialog_opened"]
